Emitter zone rotation
Added code to rotate the emitter zone along with the emitter itself.

- So far I have only added support for the line zone, other’s may come later but they are more complex.  *It may be better to swap out some of the code for three.js constructs (for example BoxZone could use things such as cubes/box3/obb).

- Additionally you see the new particle Rotation initializer in work with the new emitter-zone-rotation sandbox.

--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -22,6 +22,11 @@
           </a>
         </li>
         <li>
+          <a href="experiments/emitter-zone-rotation/index.html">
+            Emitter-Zone-Rotation
+          </a>
+        </li>
+        <li>
           <a href="experiments/gpu-renderer/index.html">
             GPU Renderer
           </a>
